------------------------------------------------------------------------------------------

New features and improvements of OpenMS:
- Kernel: replaced comparators NthPositionLess by the comparator(s) RTLess and/or MZLess.
- Kernel: replaced methods sortByNthPosition() by the method(s) sortByRT() and/or sortByMZ().
- Improved the whole framework for meta data visualization.

New features and improvements of TOPP:
- FeatureLinker: Added automated RT parameter estimated for 'labeled' algorithm.
- Added new Tools: SILACAnalyzer, IDQuantMerger, ITRAQAnalyzer
- Resampler: this tool is now used for resampling raw data instead of NoiseFilter or BaselineFilter

New features and improvements of TOPPView:
- Added functionality for editing feature data

Changes to OpenMS XML formats:
- ParamXML:
  - Restrictions in Param .ini files are represented by 'min:max' instead
    of 'min-max' now, to avoid issues with small (1e-06) and negative numbers.
  - replaced 'advanced' attribute by the 'tags' attribute.
- featureXML:
  - added tag <subordinate> to store competing features that did not qualify for the final map
  - removed <description> section
  - added document Id
- consensusXML:
	- added document Id

Changes to the contrib package:
- Updated SeqAn package to revision 2666 (this fixes the STL debug error)
- Added Cluster 3.0 library (version 1.40)

Detailed list of changes to specific OpenMS classes:
- Renamed and moved classes
  - Renamed MSMetaDataExplorer to MetaDataBrowser
  - Renamed ProcessingMethod to DataProcessing
- Removed classes
  - Removed DPeakArray and moved the functionality to the classes that inherited from DPeakArray
- New classes
  - IntList
  - StringList
- Changes to classes
	- DataProcessing: Reimplementation for MzML data.
	- Software: Reimplementation for MzML data.
  - DSpectrum
    - The peaks are no longer stored in a container member, but DSpectrum is derived 
      from std::vector<PeakType>.